Fixed Design Issue
Resolved issue where on mobile dividers not centred and gaps on edges.
Fixed by using percentages rather than static values.

--- a/assets/css/3-sections/game.sass
+++ b/assets/css/3-sections/game.sass
@@ -40,14 +40,14 @@ section
       position: absolute
 
     .divider-horizontal
-      height: 10px
-      width: 101%
-      top: 50%
+      height: 2%
+      width: 100%
+      top: 49%
 
     .divider-vertical
-      height: 101%
-      width: 10px
-      left: 50%
+      height: 100%
+      width: 2%
+      left: 49%
 
     .game-center
       position: absolute
